resources/gatekeeper/templates/00-k8sallowedregistries-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedregistries
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRegistries
      validation:
        openAPIV3Schema:
          type: object
          properties:
            registries:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedregistries

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          image := container.image
          not matches_any_registry(image, input.parameters.registries)
          msg := sprintf("Image '%s' is not from an allowed registry", [image])
        }

        matches_any_registry(image, registries) {
          registry := registries[_]
          startswith(image, registry)
        }
