resources/gatekeeper/templates/00-k8sblockplainsecrets-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '1'
  name: k8sblockplainsecrets
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPlainSecrets
      validation:
        openAPIV3Schema:
          properties:
            excludedUsers:
              type: array
              items:
                type: string
  targets:
  - rego: |
      package k8sblockplainsecrets

      violation[{"msg": msg}] {
        input.review.object.kind == "Secret"
        not is_user_excluded(input.review.userInfo.username)
        msg := "Creation of plain Kubernetes Secrets is blocked. Use SealedSecrets instead."
      }

      is_user_excluded(username) {
        excluded_users := {u | u := input.parameters.excludedUsers[_]}
        excluded_users[username]
      }
    target: admission.k8s.gatekeeper.sh
