resources/gatekeeper/templates/00-k8sdropcapabilities-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '1'
  name: k8sdropcapabilities
spec:
  crd:
    spec:
      names:
        kind: K8sDropCapabilities
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdropcapabilities

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not has_drop_all(container)
          msg := "Containers must drop all capabilities (securityContext.capabilities.drop=['ALL'])"
        }

        has_drop_all(container) {
          container.securityContext.capabilities.drop[_] == "ALL"
        }
