resources/gatekeeper/templates/00-k8snoescalation-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '1'
  name: k8snoprivilegeescalation
spec:
  crd:
    spec:
      names:
        kind: K8sNoPrivilegeEscalation
  targets:
  - rego: "package k8snoescalation\n\nviolation[{\"msg\": msg}] {\n  container :=\
      \ input.review.object.spec.containers[_]\n  container.securityContext.allowPrivilegeEscalation\
      \ != false\n  msg := \"Privilege escalation must be explicitly disabled\"\n\
      }\n"
    target: admission.k8s.gatekeeper.sh
