resources/gatekeeper/templates/00-k8snoprivileged-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '1'
  name: k8snoprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sNoPrivileged
  targets:
  - rego: "package k8snoprivileged\n\nviolation[{\"msg\": msg}] {\n  container :=\
      \ input.review.object.spec.containers[_]\n  container.securityContext.privileged\
      \ == true\n  msg := \"Privileged containers are not allowed\"\n}\n"
    target: admission.k8s.gatekeeper.sh
