resources/gatekeeper/templates/00-k8sreadonlyrootfs-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sreadonlyrootfs
spec:
  crd:
    spec:
      names:
        kind: K8sReadOnlyRootFS
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sreadonlyrootfs

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.readOnlyRootFilesystem != true
          msg := "Containers must set securityContext.readOnlyRootFilesystem=true"
        }
