resources/gatekeeper/templates/00-k8srequiredannotations-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '1'
  name: k8srequiredannotations
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredAnnotations
      validation:
        openAPIV3Schema:
          properties:
            annotations:
              items:
                type: string
              type: array
          type: object
  targets:
  - rego: "package k8srequiredannotations\n\nviolation[{\"msg\": msg}] {\n  required\
      \ := input.parameters.annotations\n  provided := input.review.object.metadata.annotations\n\
      \  missing := required[_]\n  not provided[missing]\n  msg := sprintf(\"Missing\
      \ required annotation: %s\", [missing])\n}\n"
    target: admission.k8s.gatekeeper.sh
