resources/gatekeeper/templates/00-k8srequirenamespace-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirenamespace
spec:
  crd:
    spec:
      names:
        kind: K8sRequireNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirenamespace

        violation[{"msg": msg}] {
          input.review.object.kind != "Namespace"
          not input.review.object.metadata.namespace
          msg := "Namespaced resources must explicitly set metadata.namespace"
        }
