resources/gatekeeper/templates/k8sallowednamespacepattern.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowednamespacepattern
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedNamespacePattern
      validation:
        openAPIV3Schema:
          type: object
          properties:
            regex:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowednamespacepattern

        violation[{"msg": msg}] {
          not regex.match(input.parameters.regex, input.review.object.metadata.namespace)
          msg := sprintf("Namespace '%v' does not match allowed pattern '%v'", [input.review.object.metadata.namespace, input.parameters.regex])
        }
