resources/gatekeeper/templates/k8sblockstandalonesecret.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockstandalonesecret
  annotations:
    metadata.gatekeeper.sh/title: "Block Standalone Secrets"
    metadata.gatekeeper.sh/version: 1.0.0
    description: >-
      Disallows the creation of Secrets that do not have an ownerReference
      (i.e., not managed by a controller/operator).
spec:
  crd:
    spec:
      names:
        kind: K8sBlockStandaloneSecret
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockstandalonesecret

        violation[{"msg": msg}] {
          input.review.kind.kind == "Secret"
          # Check if ownerReferences is missing or empty
          not input.review.object.metadata.ownerReferences
          # Exempt Reflector Service Account
          not input.review.userInfo.username == "system:serviceaccount:kube-system:reflector"
          # Exempt ArgoCD Application Controller (manages resources from Git)
          not input.review.userInfo.username == "system:serviceaccount:argocd:argocd-application-controller"
          msg := "Standalone Secrets are forbidden. You must use SealedSecrets or an Operator that manages the Secret."
        }
